--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.19",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
